# AHCB-prototype

./: .gitignore  README.md  benchmark.py  interact.py  pyproject.toml  run_demo.py  simulate.py  tests.py  train.py
ahcb/: __init__.py  agent.py  autoencoder.py  cube.py  curriculum.py  environment.py  math_utils.py  reservoir.py  solver.py
docs/: ARCHITECTURE.md
